# website

./: .gitattributes  .gitignore  404.org  CHANGELOG.md  CNAME  README.org  flake.nix  hie.yaml  index.html  lists.org  publish.sh  site.hs  todo.txt  website.cabal
_site/: sitemap.xml
_site/tags/: Haskell.html
docs/: 404.html  CNAME  archive.html  index.html  lists.html  robots.txt  rss.xml  sitemap.xml
docs/css/: fonts.css  main.css
docs/js/: main.js
docs/posts/: 2026-01-21-hakyll.html  2026-02-25-nqueens.html
docs/tags/: CSS.html  Emacs.html  HTML.html  Haskell.html  Nix.html  Perl.html  PureScript.html  SCSS.html  Web.html
images/: site.webmanifest
js/: main.js
posts/: 2025-12-28-hakyll.org  2026-01-14-hakyll.org  2026-01-21-hakyll.org  2026-02-25-nqueens.org
scss/: _components.scss  _general.scss  _syntax.scss  _variables.scss  fonts.scss  main.scss
templates/: archive.html  default.html  post-list.html  post.html
