name:               website
version:            0.1.0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , blaze-html == 0.9.2.0.*
                  , pandoc == 3.8.*
                  , text
                  , doctemplates
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
